# mtg

./: .gitignore  .gitmodules  Cargo.toml
src/: db.rs  embedings.rs  lib.rs  main.rs
src/db/: mod.rs  vectors.rs
src/routes/: cards.rs  get_cards.rs  mod.rs  vectors.rs
www/: index.css  index.html  index.js
