[package]
name = "mtg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scryfall_convert"
path = "./bin/scryfall_convert.rs"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastembed = { version = "3.5.0" }
indicatif = "0.17.8"
rusqlite = { version = "0.31.0", features = ["load_extension", "bundled"] }
serde_json = "1.0.118"
sqlite-vec = "0.0.1-alpha.24"
