[package]
name = "mtg"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "scryfall_convert"
path = "./bin/scryfall_convert.rs"

[[bin]]
name = "background_generator"
path = "./bin/background_generator.rs"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
fastembed = { version = "3.5.0" }
image = "0.25.1"
indicatif = "0.17.8"
reqwest = { version = "0.12.5", features = ["blocking"] }
rusqlite = { version = "0.31.0", features = ["load_extension", "bundled"] }
serde_json = "1.0.118"
wallpaper = "3.2.0"
