[package]
name = "mtg"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "scryfall_convert"
path = "./bin/scryfall_convert.rs"

[[bin]]
name = "background_generator"
path = "./bin/background_generator.rs"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-extra = "0.9.3"
chrono = "0.4.38"
fastembed = { version = "3.5.0" }
image = "0.25.1"
indicatif = "0.17.8"
reqwest = { version = "0.12.5", features = ["blocking"] }
rusqlite = { version = "0.31.0", features = ["load_extension", "bundled"] }
serde = "1.0.204"
serde_json = "1.0.118"
sqlite-vec = "0.1.1"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["limit", "load-shed", "util"] }
tower-http = { version = "0.5.2", features = ["fs"] }
wallpaper = "3.2.0"
